--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projet_serveur_node",
+  "name": "ProjetServeurNodeCRUD",
   "version": "1.0.0",
   "description": "Exemple de serveur node",
   "scripts": {
@@ -9,17 +9,20 @@
   "author": "Antonio Tavares",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.0",
-    "express": "^4.18.1",
-    "fs": "^0.0.1-security",
-    "fs-extra": "^10.1.0",
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.0",
     "http": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^2.3.3",
+    "mysql2": "^3.1.2",
     "path": "^0.12.7",
     "sha1": "^1.1.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "@types/fs-extra": "^11.0.1",
+    "@types/multer": "^1.4.7",
+    "@types/sha1": "^1.1.3",
+    "nodemon": "^2.0.20"
   }
 }
