--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "fs-extra": "^11.1.0",
     "http": "^0.0.1-security",
